Kubernetes/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "go-astrafy-service"
  namespace: "default"
  labels:
    app: "go-astrafy"
spec:
  ports:
  - protocol: "TCP"
    port: 80
  selector:
    app: "go-astrafy"
  type: "LoadBalancer"
  loadBalancerIP: ""
